# classifier

./: .env.example  .gitignore  README.md  pyproject.toml
docs/coletas/: coletas.md
docs/modelagem/: base_publicacoes.md
docs/projeto/: registro_completo.md
docs/projeto/arquivados/: helpers.py
src/dou_classifier/: __init__.py  config.py
src/dou_classifier/collect/: __init__.py  checksums.py  dados_abertos_client.py  dados_abertos_downloader.py  date_ranges.py  download_dados_abertos.py  download_inlabs.py  downloader.py  extract.py  inlabs_client.py  manifest.py  paths.py
src/dou_classifier/parse/: __init__.py  apply_legal_filter.py  build_database.py  dou_xml.py  legal_structure.py  schema.sql
tests/collect/: test_dados_abertos_client.py  test_dados_abertos_downloader.py  test_date_ranges.py  test_downloader.py  test_extract.py  test_inlabs_client.py  test_manifest.py  test_paths.py
tests/parse/: test_build_database.py  test_legal_structure.py
