[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "dou-classifier"
version = "0.1.0"
description = "Coleta e classificacao de atos publicados na Secao 1 do Diario Oficial da Uniao."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
dou-collect-inlabs = "dou_classifier.collect.download_inlabs:main"
dou-collect-dados-abertos = "dou_classifier.collect.download_dados_abertos:main"
dou-build-db = "dou_classifier.parse.build_database:main"
dou-apply-legal-filter = "dou_classifier.parse.apply_legal_filter:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"dou_classifier.parse" = ["schema.sql"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
